<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300sp"
    android:layout_height="match_parent"
    tools:context=".controller.RegistrationActivity"
    android:layout_gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/register_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:background="@drawable/round_button"
        android:onClick="register"
        android:text="Register"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <Button
        android:id="@+id/return_login_Button"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:gravity="start|center_vertical"
        android:onClick="switchToLogin"
        android:text="Back to login"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="91dp"
        android:text="name + email"
        android:theme="@style/TextView_for_EnterTextStyle" />

    <EditText
        android:id="@+id/firstName_editText"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_textView"
        android:hint="first"
        android:inputType="text"/>

    <EditText
        android:id="@+id/lastName_editText"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/name_textView"
        android:hint="last"
        android:inputType="text"/>

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/firstName_editText"
        android:hint="email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/pickPassword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="227dp"
        android:text="password"
        android:theme="@style/TextView_for_EnterTextStyle"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/pickPassword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pickPassword_textView"
        android:hint="password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/confirmPassword_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pickPassword_editText"
        android:hint="confirm password"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/pickUserType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="200dp"
        android:text="account type"
        android:theme="@style/TextView_for_EnterTextStyle"
        android:layout_alignParentLeft="true" />


    <ImageView
        android:id="@+id/regTitle_imageView"
        android:layout_width="239dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:contentDescription="Logo on Registration"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        app:srcCompat="@drawable/register_img" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/acctType_spinner"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pickUserType_textView"
        android:layout_marginTop="-200dp">

    </android.support.v7.widget.AppCompatSpinner>

</RelativeLayout>